local-setup/kustomize/overlays/ocm-prerelease/vs-registry.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: registry
  namespace: registry
spec:
  gateways:
  - platform-mesh-system/gateway
  hosts:
  - registry.portal.dev.local
  tls:
  - match:
    - sniHosts:
      - registry.portal.dev.local
    route:
    - destination:
        host: oci-registry-docker-registry.registry.svc.cluster.local
        port:
          number: 443
